# legacy-railways

./: .dockerignore  .env.example  .gitignore  .vercelignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  railway.json  vercel.json
.claude/rules/: frontend.md  impact.md  resolver.md
data/: carbon_oracle_template.json  classification_corridor.json  cluster_labels.json  corridors.json  easement_predicates.json  railcard_display.json
docs/: EXPERIMENTS_REPORT.txt  HACKATHON.md  HANDOFF_MAP_TO_WIRING.md  HANDOFF_VISUAL_COPILOT.md  REGULATION.md  demand-carbon-validation.md  regulation-test-results.md
frontend/live/: .thumbnail  UK Rail Fare Impact Platform.dc.html  data.html  fare-engine.js  index.html  rfe.adapt.js  rfe.api.js
src/agent/: README.md  fares_agent.py
tests/: test_api.py  test_brfares_oracle.py  test_carbon.py  test_compliance_join.py  test_copilot_dispatch.py  test_copilot_grammar.py  test_corridor_callings.py  test_corridor_stats.py  test_demand.py  test_impact_demo_corridor.py  test_ingest_parsers.py  test_integration_demo_e2e.py  test_odm_revenue.py  test_overview.py  test_perf_hsp.py  test_regulation_map.py  test_resolver_brfares_oracle.py  test_resolver_negatives.py  test_splits_demo_corridor.py  test_staging.py  test_timetable_parser.py  test_toc_scope.py
tools/: baseline_anomalies.py  brfares_parity.py  build_gb_outline.py  classify_corridor.py  compare_brfares.py  fetch_brfares.py  fetch_odm.py  fetch_railcard_oracles.py  probe_fares_agent.py  regulation_test.py  split_leaderboard.py  ui_smoke.py  validate_demand_carbon.py
(+58 files in other folders)
